fix: complete image autoresizing
The problem where memegenerator panel was
getting squeezed too small because of
'margin: 0 auto' has also been fixed
by addition of an outer container.
Note sure why that fixes the issue but
probabaly marghin: 0 auto was interfering
with the fact that it was a flex item so
align-items: stretch (the default) was
not working properly.

--- a/src/components/MemeGenerator/memegenerator.module.scss
+++ b/src/components/MemeGenerator/memegenerator.module.scss
@@ -1,12 +1,20 @@
 @import '../../styles/global_scss';
 
+.outercontainer {
+    //created this outer div
+    //instead of putting this flex-grow: 1 on
+    //inner div (class .container) even though
+    //this is not providing a background colour or image
+
+    flex-grow: 1;
+
+
+}
 
 .container {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    //gap: 2.25rem;
-
+    height: 100%;
 
     margin: 0 auto;
 
@@ -32,6 +40,8 @@
         padding-left: 2.25rem;
         padding-right: 2.25rem;
         padding-top: 2.25rem;
+
+
         max-width: $content-maxwidth;
 
         > *:first-child {
